Refactor: remove unused test accessors, add nullability annotations, improve test assertions, and enhance code comments for better maintainability